tests/ui/structure/01_no_params.stderr
error: expected at least one type parameter, found none
 --> tests/ui/structure/01_no_params.rs:4:8
  |
4 | struct Test;
  |        ^^^^
